RESOLVED FIXED76408
REGRESSION: r102553 Autocorrection bubble doesn't show up
https://bugs.webkit.org/show_bug.cgi?id=76408
Summary REGRESSION: r102553 Autocorrection bubble doesn't show up
Enrica Casucci
Reported 2012-01-16 16:29:06 PST
Typing a correctable word and pausing before hitting space seems to bring up red underline dots rather than showing a bubble. Hitting space and back space doesn't bring up the correction bubble either. The regression has been introduced with http://trac.webkit.org/changeset/102553.
Attachments
Patch (1.62 KB, patch)
2012-01-16 16:44 PST, Enrica Casucci
darin: review+
Enrica Casucci
Comment 1 2012-01-16 16:29:34 PST
Enrica Casucci
Comment 2 2012-01-16 16:44:50 PST
Darin Adler
Comment 3 2012-01-16 16:55:37 PST
Comment on attachment 122692 [details] Patch Is there a way we can add a regression test for this?
Enrica Casucci
Comment 4 2012-01-16 17:03:57 PST
(In reply to comment #3) > (From update of attachment 122692 [details]) > Is there a way we can add a regression test for this? With what we have today the answer is no. We need support from AppKit to know if the bubble is visible or not, and possibly its position.
Enrica Casucci
Comment 5 2012-01-16 17:13:26 PST
Committed revision 105111.
Note You need to log in before you can comment on or make changes to this bug.