REGRESSION: r102553 Autocorrection bubble doesn't show up https://bugs.webkit.org/show_bug.cgi?id=76408 <rdar://problem/10644746>

Prior to r102553 Editor::markAllMisspellingsAndBadGrammarInRanges() used to pass its
textCheckingOptions directly to markAndReplaceFor(). Now a request object is used,
but, when the object is created, the TextCheckingTypeShowCorrectionPanel flag is dropped.

Reviewed by Darin Adler.

* editing/Editor.cpp:
(WebCore::Editor::resolveTextCheckingTypeMask): Add TextCheckingTypeShowCorrectionPanel to
the returned checkingTypes when appropriate.



Canonical link: https://commits.webkit.org/93231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105111 268f45cc-cd09-0410-ab3c-d52691b4dbfc